--- a/App.config
+++ b/App.config
@@ -1,15 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
+﻿<configuration>
 	<configSections>
 		<sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
 			<section name="SejinTraceability.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		</sectionGroup>
 	</configSections>
+
 	<connectionStrings>
 		<!-- Connection String do Twojej bazy danych -->
-		<add name="MyConnectionString" connectionString="Data Source=Wojciech\SQLEXPRESS;Initial Catalog=SejinTraceabilityDB;User ID=Sejin;Password=admin"
+		<add name="MyConnectionString" connectionString="Data Source=WOJCIECH\SQLEXPRESS;Initial Catalog=SejinTraceabilityDB;Integrated Security=True;User ID=WOJCIECH\wojci"
              providerName="System.Data.SqlClient" />
 	</connectionStrings>
+
 	<applicationSettings>
 		<SejinTraceability.Properties.Settings>
 			<setting name="ConnectionString" serializeAs="String">
