--- a/SejinTraceability.csproj
+++ b/SejinTraceability.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Azure.Amqp" Version="2.6.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
     <PackageReference Include="QRCoder" Version="1.4.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
