--- a/SejinTraceability.csproj
+++ b/SejinTraceability.csproj
@@ -18,10 +18,12 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
 		<PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
 		<PackageReference Include="QRCoder" Version="1.4.3" />
+		<PackageReference Include="stdole" Version="17.8.37221" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
 		<PackageReference Include="System.Reactive" Version="6.0.0" />
 		<PackageReference Include="System.Reactive.Linq" Version="6.0.0" />
 		<PackageReference Include="Xam.Reactive.DispatchScheduler" Version="1.1.3" />
+		<PackageReference Include="ZXing.Net" Version="0.16.9" />
 	</ItemGroup>
 
 	<ItemGroup>
